k8s/base/customer-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-ui-svc
  namespace: prod
spec:
  selector:
    app: customer-ui
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
